Sigma normalized NLP similarities

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -15,6 +15,7 @@
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.ticker as ticker\n",
+    "from matplotlib.ticker import FuncFormatter\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.auto import tqdm\n",
     "import seaborn as sns\n",
@@ -55,7 +56,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "def fetch_artifact(name, split, fold):\n",
@@ -771,7 +776,7 @@
    "outputs": [],
    "source": [
     "baseline = get_baseline()\n",
-    "df_path = Path(\"figs/zoom_in_nlp_100.csv.gz\")\n",
+    "df_path = Path(\".figs/zoom_in_nlp_100.csv.gz\")\n",
     "if df_path.exists():\n",
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
@@ -853,7 +858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"figs/zoom_in_nlp.csv\")\n",
+    "df = pd.read_csv(\".figs/zoom_in_nlp.csv\")\n",
     "baseline = get_baseline()\n",
     "nlp_distances = [\n",
     "    \"glove_bow_cosine\",\n",
@@ -864,8 +869,12 @@
     "baseline = baseline[nlp_distances].agg([\"mean\", \"std\"])\n",
     "baseline = baseline.T.reset_index(names=\"distance\")\n",
     "df = df.merge(baseline, on=\"distance\", suffixes=(\"\", \"_baseline\"))\n",
-    "df[\"mean\"] = (df[\"mean\"] - df[\"mean_baseline\"]) / df[\"mean_baseline\"]\n",
-    "# df[\"std\"] = df[\"std\"] / df[\"mean_baseline\"]"
+    "df[\"mean\"] = (df[\"mean\"] - df[\"mean_baseline\"]) / df[\"std_baseline\"]\n",
+    "df[\"std\"] = df[\"std\"] / df[\"std_baseline\"]\n",
+    "df = df.replace(\n",
+    "    {\"glove_bow_pos_restricted_cosine\": \"Semantics\", \"pos_ratio\": \"Syntax\"}\n",
+    ")\n",
+    "df = df[df.distance.isin([\"Semantics\", \"Syntax\"])]"
    ]
   },
   {
@@ -874,10 +883,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.ticker import ScalarFormatter, FuncFormatter\n",
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
+    "plt.figure(figsize=(8, 6))\n",
     "ax = sns.lineplot(data=df, x=\"top\", y=\"mean\", hue=\"distance\")\n",
+    "plt.legend(title=None, frameon=False)\n",
     "plt.legend(bbox_to_anchor=(1.05, 0.5), loc=\"center left\")\n",
     "# for distance in df[\"distance\"].unique():\n",
     "#     plt.fill_between(\n",
@@ -892,10 +900,13 @@
     "plt.ylabel(\"Normalized similarity\")\n",
     "plt.xscale(\"log\")\n",
     "# plt.title(\"(similarity - baseline mean) / baseline std\")\n",
-    "plt.title(\"(similarity - baseline mean) / baseline mean\")\n",
+    "# plt.title(\"(similarity - baseline mean) / baseline mean\")\n",
     "ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
-    "# ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
-    "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{int(100 * x)}%\"))"
+    "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
+    "# ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{int(100 * x)}%\"))\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
+    ")"
    ]
   },
   {
