--- a/figures.ipynb
+++ b/figures.ipynb
@@ -10,7 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "import wandb, json\n",
+    "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -35,15 +35,25 @@
     "plt.rcParams[\"axes.titleweight\"] = \"bold\"\n",
     "plt.rcParams[\"axes.titlesize\"] = 60\n",
     "plt.rcParams[\"legend.borderpad\"] = 1\n",
+    "sns.set_context(\"poster\")\n",
+    "sns.set_style(\"ticks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "\n",
     "os.environ[\"WANDB_SILENT\"] = \"true\"\n",
     "entity_name = \"louis-jalouzot\"\n",
     "project_name = \"fMRI-Decoding-wrap-up\"\n",
     "api = wandb.Api(\n",
     "    timeout=100, overrides={\"project\": project_name, \"entity\": entity_name}\n",
     ")\n",
-    "global_run = wandb.init()\n",
-    "sns.set_context(\"poster\")\n",
-    "sns.set_style(\"ticks\")"
+    "global_run = wandb.init()"
    ]
   },
   {
@@ -964,6 +974,243 @@
    "outputs": [],
    "source": [
     "df.to_csv(\"figs/zoom_in_nlp_all_agg.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### V3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### One time compute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline = get_baseline()\n",
+    "nlp_distances = [\n",
+    "    \"glove_bow_cosine\",\n",
+    "    \"glove_bow_pos_restricted_cosine\",\n",
+    "    \"pos_ratio\",\n",
+    "    \"ratio\",\n",
+    "]\n",
+    "baseline = baseline[nlp_distances].agg([\"mean\", \"std\"])\n",
+    "baseline = baseline.T.reset_index(names=\"distance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 60Go RAM\n",
+    "df = pd.read_csv(\".figs/zoom_in_nlp_all_3_subjects.csv.gz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = df[\n",
+    "    [\n",
+    "        \"subject\",\n",
+    "        \"top\",\n",
+    "        \"glove_bow_pos_restricted_cosine\",\n",
+    "        \"pos_ratio\",\n",
+    "    ]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = tmp.melt(\n",
+    "    id_vars=[\"subject\", \"top\"],\n",
+    "    value_vars=[\"glove_bow_pos_restricted_cosine\", \"pos_ratio\"],\n",
+    "    var_name=\"distance\",\n",
+    "    value_name=\"Similarity\",\n",
+    ")\n",
+    "tmp = tmp.merge(baseline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp[\"subject\"] = tmp.subject.str.replace(\"UTS0\", \"\").astype(int)\n",
+    "tmp[\"distance\"] = tmp.distance.astype(\"category\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp.to_parquet(\".figs/tmp.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(\".figs/tmp.parquet\")\n",
+    "df[\"Normalized similarity\"] = (df[\"Similarity\"] - df[\"mean\"]) / df[\"std\"]\n",
+    "df[\"distance\"] = df[\"distance\"].cat.rename_categories(\n",
+    "    {\n",
+    "        \"glove_bow_pos_restricted_cosine\": \"Semantics\",\n",
+    "        \"pos_ratio\": \"Syntax\",\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = df.groupby([\"subject\", \"top\", \"distance\"], observed=True).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "ax = sns.lineplot(\n",
+    "    data=df,\n",
+    "    x=\"top\",\n",
+    "    y=\"Normalized similarity\",\n",
+    "    hue=\"subject\",\n",
+    "    style=\"distance\",\n",
+    "    palette=\"tab10\",\n",
+    ")\n",
+    "plt.legend(\n",
+    "    bbox_to_anchor=(0.5, 1),\n",
+    "    loc=\"lower center\",\n",
+    "    ncol=2,\n",
+    "    borderaxespad=0,\n",
+    "    frameon=False,\n",
+    ")\n",
+    "ax.legend_.get_texts()[0].set_text(\"Subject\")\n",
+    "ax.legend_.get_texts()[4].set_text(\"Similarity type\")\n",
+    "plt.xlabel(\"Candidate rank\")\n",
+    "plt.xscale(\"log\")\n",
+    "ax.axhline(0, ls=\"--\", color=\"grey\")\n",
+    "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = tmp.groupby([\"subject\", \"top\"]).mean().reset_index()\n",
+    "tmp = tmp.melt(\n",
+    "    id_vars=[\"subject\", \"top\"],\n",
+    "    value_vars=[\"glove_bow_pos_restricted_cosine\", \"pos_ratio\"],\n",
+    "    var_name=\"distance\",\n",
+    "    value_name=\"Normalized similarity\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = tmp.merge(baseline)\n",
+    "tmp[\"Normalized similarity\"] = (\n",
+    "    tmp[\"Normalized similarity\"] - tmp[\"mean\"]\n",
+    ") / tmp[\"std\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = tmp.replace(\n",
+    "    {\n",
+    "        \"glove_bow_pos_restricted_cosine\": \"Semantics\",\n",
+    "        \"pos_ratio\": \"Syntax\",\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.line(\n",
+    "    tmp,\n",
+    "    x=\"top\",\n",
+    "    y=\"Normalized similarity\",\n",
+    "    color=\"subject\",\n",
+    "    line_dash=\"distance\",\n",
+    "    log_x=True,\n",
+    "    labels={\n",
+    "        \"distance\": \"Similarity type\",\n",
+    "        \"subject\": \"Subject\",\n",
+    "        \"top\": \"Candidate rank\",\n",
+    "        \"Normalized similarity\": \"Normalized similarity (σ)\",\n",
+    "    },\n",
+    ")\n",
+    "fig.add_hline(y=0, line_dash=\"dash\", line_color=\"gray\")\n",
+    "fig = fig.update_traces(\n",
+    "    line=dict(width=4),\n",
+    ")\n",
+    "fig = fig.update_layout(\n",
+    "    font=dict(size=24),\n",
+    "    xaxis_title_font=dict(size=24),\n",
+    "    yaxis_title_font=dict(size=24),\n",
+    "    legend_title_font=dict(size=24),\n",
+    ")\n",
+    "fig.write_html(\".figs/zoom_in_nlp_all_3_subjects.html\")"
    ]
   },
   {
