--- a/figures.ipynb
+++ b/figures.ipynb
@@ -50,9 +50,7 @@
     "os.environ[\"WANDB_SILENT\"] = \"true\"\n",
     "entity_name = \"louis-jalouzot\"\n",
     "project_name = \"fMRI-Decoding-wrap-up\"\n",
-    "api = wandb.Api(\n",
-    "    timeout=100, overrides={\"project\": project_name, \"entity\": entity_name}\n",
-    ")\n",
+    "api = wandb.Api(timeout=100, overrides={\"project\": project_name, \"entity\": entity_name})\n",
     "global_run = wandb.init()"
    ]
   },
@@ -103,17 +101,11 @@
     "            if n_folds is not None:\n",
     "                for fold in range(1, n_folds + 1):\n",
     "                    metrics = fetch_artifact(name, split, fold)\n",
-    "                    df.append(\n",
-    "                        pd.DataFrame(\n",
-    "                            metrics[\"data\"], columns=metrics[\"columns\"]\n",
-    "                        )\n",
-    "                    )\n",
+    "                    df.append(pd.DataFrame(metrics[\"data\"], columns=metrics[\"columns\"]))\n",
     "                    pbar.update(1)\n",
     "            else:\n",
     "                metrics = fetch_artifact(name, split, None)\n",
-    "                df.append(\n",
-    "                    pd.DataFrame(metrics[\"data\"], columns=metrics[\"columns\"])\n",
-    "                )\n",
+    "                df.append(pd.DataFrame(metrics[\"data\"], columns=metrics[\"columns\"]))\n",
     "                pbar.update(1)\n",
     "\n",
     "    return pd.concat(df)"
@@ -227,10 +219,7 @@
     "cols = [\n",
     "    col\n",
     "    for col in df\n",
-    "    if \"top_10_accuracy\" in col\n",
-    "    and \"test\" in col\n",
-    "    and \"fold\" in col\n",
-    "    and \"fmriprep\" in col\n",
+    "    if \"top_10_accuracy\" in col and \"test\" in col and \"fold\" in col and \"fmriprep\" in col\n",
     "]\n",
     "id_vars_desc = {\n",
     "    \"latents_cfg.context_length\": \"+ Context Length\",\n",
@@ -288,9 +277,7 @@
     "ax.set_ylabel(\"\")\n",
     "ax.set_xlim(-0.005, ax.get_xlim()[1])\n",
     "ax.xaxis.set_major_locator(ticker.LinearLocator(4))\n",
-    "ax.xaxis.set_major_formatter(\n",
-    "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
-    ")\n",
+    "ax.xaxis.set_major_formatter(ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\"))\n",
     "sns.despine(offset=20, trim=True)\n",
     "ax.set_yticks(list(range(2)) + list(range(3, 10)))\n",
     "for i, label in enumerate(ax.get_yticklabels()):\n",
@@ -336,10 +323,7 @@
     "metric_cols = [\n",
     "    col\n",
     "    for col in df\n",
-    "    if \"fold\" in col\n",
-    "    and \"test\" in col\n",
-    "    and \"top_10_accuracy\" in col\n",
-    "    and \"lebel2023\" in col\n",
+    "    if \"fold\" in col and \"test\" in col and \"top_10_accuracy\" in col and \"lebel2023\" in col\n",
     "]\n",
     "tmp = df.melt(\n",
     "    id_vars=[\"train/n_trs\", \"train/size\"],\n",
@@ -411,9 +395,7 @@
     "#     ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     "# )\n",
     "ax.xaxis.set_major_formatter(\n",
-    "    ticker.FuncFormatter(\n",
-    "        lambda x, _: f\"$10^{int(np.log10(x))}$\" if x != 100 else 0\n",
-    "    )\n",
+    "    ticker.FuncFormatter(lambda x, _: f\"$10^{int(np.log10(x))}$\" if x != 100 else 0)\n",
     ")\n",
     "ticklabels = ax.get_xticklabels()\n",
     "for label in ticklabels:\n",
@@ -494,9 +476,7 @@
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
     "    df = []\n",
-    "    runs = api.runs(\n",
-    "        filters={\"tags\": {\"$in\": [\"increase_subjects_balanced_v2\"]}}\n",
-    "    )\n",
+    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"increase_subjects_balanced_v2\"]}})\n",
     "    for run in tqdm(runs):\n",
     "        if run._state == \"finished\":\n",
     "            run_data = run.config | run.summary._json_dict\n",
@@ -518,10 +498,7 @@
     "cols = [\n",
     "    col\n",
     "    for col in df\n",
-    "    if \"top_10_accuracy\" in col\n",
-    "    and \"test\" in col\n",
-    "    and \"fold\" in col\n",
-    "    and \"fmriprep\" in col\n",
+    "    if \"top_10_accuracy\" in col and \"test\" in col and \"fold\" in col and \"fmriprep\" in col\n",
     "]\n",
     "tmp = df.melt(\n",
     "    id_vars=[\n",
@@ -534,10 +511,7 @@
     "    var_name=\"subject\",\n",
     ")\n",
     "tmp[\"fold\"] = (\n",
-    "    tmp.subject.str.split(\"/\")\n",
-    "    .apply(lambda x: x[0])\n",
-    "    .str.split(\"_\")\n",
-    "    .apply(lambda x: x[-1])\n",
+    "    tmp.subject.str.split(\"/\").apply(lambda x: x[0]).str.split(\"_\").apply(lambda x: x[-1])\n",
     ")\n",
     "tmp[\"subject\"] = (\n",
     "    tmp.subject.str.split(\"/\")\n",
@@ -585,9 +559,7 @@
     "best_combis = combi_scores.groupby(\n",
     "    [\"subject\", \"n_subjects\", \"wrapper_cfg.hidden_dim\"]\n",
     ").idxmax()\n",
-    "best_combis = (\n",
-    "    combi_scores[best_combis].reset_index().drop(columns=\"Top 10 Accuracy\")\n",
-    ")\n",
+    "best_combis = combi_scores[best_combis].reset_index().drop(columns=\"Top 10 Accuracy\")\n",
     "tmp = tmp.merge(best_combis)"
    ]
   },
@@ -621,14 +593,10 @@
     "    loc=\"center right\",\n",
     "    frame_on=True,\n",
     ")\n",
-    "plt.legend(\n",
-    "    bbox_to_anchor=(1.3, 1), loc=\"upper left\", borderaxespad=0.0, frameon=False\n",
-    ")\n",
+    "plt.legend(bbox_to_anchor=(1.3, 1), loc=\"upper left\", borderaxespad=0.0, frameon=False)\n",
     "for ax in g.axes.flat:\n",
     "    ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
-    "plt.savefig(\n",
-    "    \"paper/figs/increase_subjects.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
-    ")"
+    "plt.savefig(\"paper/figs/increase_subjects.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
@@ -656,9 +624,7 @@
     "            df.append(pd.json_normalize(run_data))\n",
     "    df = pd.concat(df)\n",
     "    df[\"n_subjects\"] = df[\"subjects.lebel2023_fmriprep\"].apply(len)\n",
-    "    df[\"subjects.lebel2023_fmriprep\"] = df[\n",
-    "        \"subjects.lebel2023_fmriprep\"\n",
-    "    ].astype(str)\n",
+    "    df[\"subjects.lebel2023_fmriprep\"] = df[\"subjects.lebel2023_fmriprep\"].astype(str)\n",
     "    df.to_csv(df_path, index=False)"
    ]
   },
@@ -671,10 +637,7 @@
     "cols = [\n",
     "    col\n",
     "    for col in df\n",
-    "    if \"top_10_accuracy\" in col\n",
-    "    and \"test\" in col\n",
-    "    and \"fold\" in col\n",
-    "    and \"fmriprep\" in col\n",
+    "    if \"top_10_accuracy\" in col and \"test\" in col and \"fold\" in col and \"fmriprep\" in col\n",
     "]\n",
     "tmp = df.melt(\n",
     "    id_vars=[\n",
@@ -688,10 +651,7 @@
     "    var_name=\"subject\",\n",
     ")\n",
     "tmp[\"fold\"] = (\n",
-    "    tmp.subject.str.split(\"/\")\n",
-    "    .apply(lambda x: x[0])\n",
-    "    .str.split(\"_\")\n",
-    "    .apply(lambda x: x[-1])\n",
+    "    tmp.subject.str.split(\"/\").apply(lambda x: x[0]).str.split(\"_\").apply(lambda x: x[-1])\n",
     ")\n",
     "tmp[\"subject\"] = (\n",
     "    tmp.subject.str.split(\"/\")\n",
@@ -790,9 +750,7 @@
     "if df_path.exists():\n",
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
-    "    df = load_split_folds(\n",
-    "        \"b2af211a703e07acc44416e4bafa8c35fb85e65c\"\n",
-    "    )  # zoom_in_nlp_100\n",
+    "    df = load_split_folds(\"b2af211a703e07acc44416e4bafa8c35fb85e65c\")  # zoom_in_nlp_100\n",
     "    df.to_csv(df_path, index=False)\n",
     "baseline = baseline[[\"glove_bow_pos_restricted_cosine\", \"pos_ratio\"]].mean()\n",
     "df[[\"glove_bow_pos_restricted_cosine\", \"pos_ratio\"]] = (\n",
@@ -850,9 +808,7 @@
     "g.axes[0, 0].yaxis.set_major_formatter(\n",
     "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     ")\n",
-    "plt.savefig(\n",
-    "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
-    ")"
+    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
@@ -881,9 +837,7 @@
     "df = df.merge(baseline, on=\"distance\", suffixes=(\"\", \"_baseline\"))\n",
     "df[\"mean\"] = (df[\"mean\"] - df[\"mean_baseline\"]) / df[\"std_baseline\"]\n",
     "df[\"std\"] = df[\"std\"] / df[\"std_baseline\"]\n",
-    "df = df.replace(\n",
-    "    {\"glove_bow_pos_restricted_cosine\": \"Semantics\", \"pos_ratio\": \"Syntax\"}\n",
-    ")\n",
+    "df = df.replace({\"glove_bow_pos_restricted_cosine\": \"Semantics\", \"pos_ratio\": \"Syntax\"})\n",
     "df = df[df.distance.isin([\"Semantics\", \"Syntax\"])]"
    ]
   },
@@ -913,9 +867,7 @@
     "ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
     "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
     "# ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{int(100 * x)}%\"))\n",
-    "plt.savefig(\n",
-    "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
-    ")"
+    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
@@ -1107,7 +1059,7 @@
    "source": [
     "plt.figure(figsize=(8, 6))\n",
     "ax = sns.lineplot(\n",
-    "    data=df,\n",
+    "    data=df.query(\"top < 20\"),\n",
     "    x=\"top\",\n",
     "    y=\"Normalized similarity\",\n",
     "    hue=\"subject\",\n",
@@ -1127,9 +1079,79 @@
     "plt.xscale(\"log\")\n",
     "ax.axhline(0, ls=\"--\", color=\"grey\")\n",
     "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
-    "plt.savefig(\n",
-    "    \"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0\n",
-    ")"
+    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### V4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.relplot(\n",
+    "    data=df,\n",
+    "    x=\"top\",\n",
+    "    y=\"Normalized similarity\",\n",
+    "    hue=\"subject\",\n",
+    "    col=\"distance\",\n",
+    "    kind=\"line\",\n",
+    "    palette=\"tab10\",\n",
+    "    height=6.5,\n",
+    "    aspect=1.25,\n",
+    "    col_order=[\"Syntax\", \"Semantics\"],\n",
+    "    legend=False,\n",
+    ")\n",
+    "col_titles = {\"Syntax\": \"Syntactic similarity\", \"Semantics\": \"Semantic similarity\"}\n",
+    "other_distance = {\"Syntax\": \"Semantics\", \"Semantics\": \"Syntax\"}\n",
+    "for i, ax in enumerate(g.axes.flat):\n",
+    "    current_distance = g.col_names[i]\n",
+    "    sns.lineplot(\n",
+    "        data=df.query(f\"distance == '{other_distance[current_distance]}'\"),\n",
+    "        x=\"top\",\n",
+    "        y=\"Normalized similarity\",\n",
+    "        hue=\"subject\",\n",
+    "        palette=[\"grey\"] * len(df[\"subject\"].unique()),\n",
+    "        legend=False,\n",
+    "        ax=ax,\n",
+    "        alpha=0.5,\n",
+    "        zorder=0,\n",
+    "    )\n",
+    "    ax.set_title(col_titles[current_distance])\n",
+    "    ax.set_xlabel(\"Candidate rank\")\n",
+    "    ax.set_xscale(\"log\")\n",
+    "    ax.axhline(0, ls=\"--\", color=\"grey\")\n",
+    "    ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
+    "    if i == 0:\n",
+    "        ax.set_ylabel(\"Normalized similarity\")\n",
+    "    else:\n",
+    "        ax.set_ylabel(\"\")\n",
+    "\n",
+    "handles, labels = [], []\n",
+    "palette = sns.color_palette(\"tab10\", n_colors=df[\"subject\"].unique().shape[0])\n",
+    "for idx, subject_id in enumerate(sorted(df[\"subject\"].unique())):\n",
+    "    handles.append(plt.Line2D([0], [0], color=palette[idx], lw=7))\n",
+    "    labels.append(f\"Subject {subject_id}\")\n",
+    "handles.append(plt.Line2D([0], [0], color=\"grey\", lw=7, alpha=0.5))\n",
+    "labels.append(\"Other similarity\")\n",
+    "g.fig.legend(\n",
+    "    handles,\n",
+    "    labels,\n",
+    "    bbox_to_anchor=(0.875, 0.825),\n",
+    "    loc=\"upper left\",\n",
+    "    borderaxespad=0,\n",
+    "    frameon=False,\n",
+    "    title=None,\n",
+    "    borderpad=0,\n",
+    ")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
@@ -1161,9 +1183,7 @@
    "outputs": [],
    "source": [
     "tmp = tmp.merge(baseline)\n",
-    "tmp[\"Normalized similarity\"] = (\n",
-    "    tmp[\"Normalized similarity\"] - tmp[\"mean\"]\n",
-    ") / tmp[\"std\"]"
+    "tmp[\"Normalized similarity\"] = (tmp[\"Normalized similarity\"] - tmp[\"mean\"]) / tmp[\"std\"]"
    ]
   },
   {
@@ -1229,11 +1249,7 @@
     "sorted_runs = df.groupby(\"run\").top_10_accuracy.mean().sort_values()\n",
     "best_runs = sorted_runs.iloc[-20:].index\n",
     "worst_runs = sorted_runs.iloc[:20].index\n",
-    "tmp = (\n",
-    "    df[(df.run.isin(best_runs)) + (df.run.isin(worst_runs))]\n",
-    "    .query(\"top < 80\")\n",
-    "    .copy()\n",
-    ")\n",
+    "tmp = df[(df.run.isin(best_runs)) + (df.run.isin(worst_runs))].query(\"top < 80\").copy()\n",
     "tmp[\"run_type\"] = \"20 Worst stories\"\n",
     "tmp.loc[tmp.run.isin(best_runs), \"run_type\"] = \"20 Best stories\"\n",
     "tmp = tmp.melt(\n",
