New figures + PNGs with transparent background

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -283,7 +283,10 @@
     "for i, label in enumerate(ax.get_yticklabels()):\n",
     "    if i > 1:\n",
     "        label.set_color(sns.color_palette(\"Blues\")[5])\n",
-    "plt.savefig(\"paper/figs/setup.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+    "plt.savefig(\"paper/figs/setup.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/setup.png\", bbox_inches=\"tight\", pad_inches=0, dpi=600, transparent=True\n",
+    ")"
    ]
   },
   {
@@ -448,7 +451,14 @@
     ")\n",
     "ax.plot([135, 165], [-0.07, -0.03], clip_on=False, color=\"k\", zorder=200)\n",
     "ax.plot([200, 245], [-0.07, -0.03], clip_on=False, color=\"k\", zorder=200)\n",
-    "plt.savefig(\"paper/figs/increase_data.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+    "plt.savefig(\"paper/figs/increase_data.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/increase_data.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
    ]
   },
   {
@@ -471,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_path = Path(\"figs/increase_subjects_df.csv.gz\")\n",
+    "df_path = Path(\".figs/increase_subjects_df.csv.gz\")\n",
     "if df_path.exists():\n",
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
@@ -572,6 +582,49 @@
     "g = sns.relplot(\n",
     "    data=tmp,\n",
     "    x=\"n_subjects\",\n",
+    "    y=\"Top 10 Accuracy\",\n",
+    "    hue=\"subject\",\n",
+    "    kind=\"line\",\n",
+    "    col=\"wrapper_cfg.hidden_dim\",\n",
+    "    height=6,\n",
+    "    aspect=1.5,\n",
+    "    palette=\"tab10\",\n",
+    "    legend=\"full\",\n",
+    ")\n",
+    "g.axes[0, 0].yaxis.set_major_formatter(\n",
+    "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
+    ")\n",
+    "g.set_titles(\"Hidden dim: {col_name}\")\n",
+    "g.set_axis_labels(\"Number of subjects\")\n",
+    "sns.despine(offset=10, trim=True)\n",
+    "g.legend.set(\n",
+    "    title=\"Subject\",\n",
+    "    bbox_to_anchor=(1, 0.5),\n",
+    "    loc=\"center right\",\n",
+    "    frame_on=True,\n",
+    ")\n",
+    "plt.legend(bbox_to_anchor=(1.3, 1), loc=\"upper left\", borderaxespad=0.0, frameon=False)\n",
+    "for ax in g.axes.flat:\n",
+    "    ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
+    "plt.savefig(\"paper/figs/increase_subjects.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/increase_subjects.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.relplot(\n",
+    "    data=tmp,\n",
+    "    x=\"n_subjects\",\n",
     "    y=\"Multi - single\\nTop 10 Accuracy\",\n",
     "    hue=\"subject\",\n",
     "    kind=\"line\",\n",
@@ -596,7 +649,43 @@
     "plt.legend(bbox_to_anchor=(1.3, 1), loc=\"upper left\", borderaxespad=0.0, frameon=False)\n",
     "for ax in g.axes.flat:\n",
     "    ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
-    "plt.savefig(\"paper/figs/increase_subjects.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+    "plt.savefig(\"paper/figs/increase_subjects_v2.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/increase_subjects_v2.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 4))\n",
+    "ax = sns.lineplot(\n",
+    "    data=tmp[tmp[\"wrapper_cfg.hidden_dim\"] == 4096],\n",
+    "    x=\"n_subjects\",\n",
+    "    y=\"Multi - single\\nTop 10 Accuracy\",\n",
+    "    hue=\"subject\",\n",
+    "    palette=\"tab10\",\n",
+    "    legend=False,\n",
+    ")\n",
+    "ax.yaxis.set_major_formatter(ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\"))\n",
+    "ax.set_xlabel(\"Number of subjects\")\n",
+    "sns.despine(offset=10, trim=True)\n",
+    "ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
+    "plt.savefig(\"paper/figs/increase_subjects_v3.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/increase_subjects_v3.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
    ]
   },
   {
@@ -612,12 +701,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_path = Path(\"figs/overlap_v2_df.csv.gz\")\n",
+    "df_path = Path(\".figs/overlap_v4_df.csv.gz\")\n",
     "if df_path.exists():\n",
     "    df = pd.read_csv(df_path)\n",
     "else:\n",
     "    df = []\n",
-    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"overlap_v2\"]}})\n",
+    "    runs = api.runs(filters={\"tags\": {\"$in\": [\"overlap_v4\"]}})\n",
     "    for run in tqdm(runs):\n",
     "        if run._state == \"finished\":\n",
     "            run_data = run.config | run.summary._json_dict\n",
@@ -670,17 +759,10 @@
     "    on=[\"wrapper_cfg.hidden_dim\", \"subject\", \"fold\"],\n",
     "    suffixes=(\"\", \" single\"),\n",
     ")\n",
-    "tmp[\"Top 10 Accuracy\"] = tmp[\"Top 10 Accuracy\"] - tmp[\"Top 10 Accuracy single\"]\n",
+    "tmp[\"Multi - single\\nTop 10 Accuracy\"] = (\n",
+    "    tmp[\"Top 10 Accuracy\"] - tmp[\"Top 10 Accuracy single\"]\n",
+    ")\n",
     "tmp = tmp[tmp.n_subjects == 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp.groupby([\"subject\", \"wrapper_cfg.hidden_dim\", \"splitting.overlap\"]).count()"
    ]
   },
   {
@@ -692,7 +774,7 @@
     "g = sns.relplot(\n",
     "    data=tmp,\n",
     "    x=\"splitting.overlap\",\n",
-    "    y=\"Top 10 Accuracy\",\n",
+    "    y=\"Multi - single\\nTop 10 Accuracy\",\n",
     "    kind=\"line\",\n",
     "    col=\"wrapper_cfg.hidden_dim\",\n",
     "    hue=\"subject\",\n",
@@ -722,7 +804,41 @@
     "    frameon=False,\n",
     ")\n",
     "sns.despine(offset=10, trim=True)\n",
-    "plt.savefig(\"paper/figs/overlap.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+    "plt.savefig(\"paper/figs/overlap.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/overlap.png\", bbox_inches=\"tight\", pad_inches=0, dpi=600, transparent=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 4))\n",
+    "ax = sns.lineplot(\n",
+    "    data=tmp[tmp[\"wrapper_cfg.hidden_dim\"] == 4096],\n",
+    "    x=\"splitting.overlap\",\n",
+    "    y=\"Multi - single\\nTop 10 Accuracy\",\n",
+    "    hue=\"subject\",\n",
+    "    hue_order=sorted(tmp.subject.unique()),\n",
+    "    legend=False,\n",
+    ")\n",
+    "ax.yaxis.set_major_formatter(\n",
+    "    ticker.FuncFormatter(lambda y, _: f\"{int(round(100 * y,0))}%\")\n",
+    ")\n",
+    "ax.set_xlabel(\"Stimuli overlap\")\n",
+    "ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
+    "sns.despine(offset=10, trim=True)\n",
+    "plt.savefig(\"paper/figs/overlap_v2.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/overlap_v2.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
    ]
   },
   {
@@ -808,7 +924,14 @@
     "g.axes[0, 0].yaxis.set_major_formatter(\n",
     "    ticker.FuncFormatter(lambda y, _: f\"{int(100 * y)}%\")\n",
     ")\n",
-    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/nlp_similarities.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
    ]
   },
   {
@@ -867,7 +990,14 @@
     "ax.axhline(0, ls=\"--\", color=\"black\", alpha=0.5)\n",
     "ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
     "# ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{int(100 * x)}%\"))\n",
-    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
+    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)\n",
+    "plt.savefig(\n",
+    "    \"paper/figs/nlp_similarities.png\",\n",
+    "    bbox_inches=\"tight\",\n",
+    "    pad_inches=0,\n",
+    "    dpi=600,\n",
+    "    transparent=True,\n",
+    ")"
    ]
   },
   {
@@ -925,7 +1055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"figs/zoom_in_nlp_all_agg.csv\", index=False)"
+    "df.to_csv(\".figs/zoom_in_nlp_all_agg.csv\", index=False)"
    ]
   },
   {
@@ -1086,78 +1216,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### V4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = sns.relplot(\n",
-    "    data=df,\n",
-    "    x=\"top\",\n",
-    "    y=\"Normalized similarity\",\n",
-    "    hue=\"subject\",\n",
-    "    col=\"distance\",\n",
-    "    kind=\"line\",\n",
-    "    palette=\"tab10\",\n",
-    "    height=6.5,\n",
-    "    aspect=1.25,\n",
-    "    col_order=[\"Syntax\", \"Semantics\"],\n",
-    "    legend=False,\n",
-    ")\n",
-    "col_titles = {\"Syntax\": \"Syntactic similarity\", \"Semantics\": \"Semantic similarity\"}\n",
-    "other_distance = {\"Syntax\": \"Semantics\", \"Semantics\": \"Syntax\"}\n",
-    "for i, ax in enumerate(g.axes.flat):\n",
-    "    current_distance = g.col_names[i]\n",
-    "    sns.lineplot(\n",
-    "        data=df.query(f\"distance == '{other_distance[current_distance]}'\"),\n",
-    "        x=\"top\",\n",
-    "        y=\"Normalized similarity\",\n",
-    "        hue=\"subject\",\n",
-    "        palette=[\"grey\"] * len(df[\"subject\"].unique()),\n",
-    "        legend=False,\n",
-    "        ax=ax,\n",
-    "        alpha=0.5,\n",
-    "        zorder=0,\n",
-    "    )\n",
-    "    ax.set_title(col_titles[current_distance])\n",
-    "    ax.set_xlabel(\"Candidate rank\")\n",
-    "    ax.set_xscale(\"log\")\n",
-    "    ax.axhline(0, ls=\"--\", color=\"grey\")\n",
-    "    ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:.1f} $\\sigma$\"))\n",
-    "    if i == 0:\n",
-    "        ax.set_ylabel(\"Normalized similarity\")\n",
-    "    else:\n",
-    "        ax.set_ylabel(\"\")\n",
-    "\n",
-    "handles, labels = [], []\n",
-    "palette = sns.color_palette(\"tab10\", n_colors=df[\"subject\"].unique().shape[0])\n",
-    "for idx, subject_id in enumerate(sorted(df[\"subject\"].unique())):\n",
-    "    handles.append(plt.Line2D([0], [0], color=palette[idx], lw=7))\n",
-    "    labels.append(f\"Subject {subject_id}\")\n",
-    "handles.append(plt.Line2D([0], [0], color=\"grey\", lw=7, alpha=0.5))\n",
-    "labels.append(\"Other similarity\")\n",
-    "g.fig.legend(\n",
-    "    handles,\n",
-    "    labels,\n",
-    "    bbox_to_anchor=(0.875, 0.825),\n",
-    "    loc=\"upper left\",\n",
-    "    borderaxespad=0,\n",
-    "    frameon=False,\n",
-    "    title=None,\n",
-    "    borderpad=0,\n",
-    ")\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(\"paper/figs/nlp_similarities.pdf\", bbox_inches=\"tight\", pad_inches=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Plotly"
    ]
   },
@@ -1310,7 +1368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "decoding (3.11.11)",
    "language": "python",
    "name": "python3"
   },
